Use githubactions logger

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: .NET
+name: Run tests with coverage
 
 on:
   push:
@@ -32,10 +32,10 @@ jobs:
         rm testsettings.json &&
         echo $TESTSETTINGS_JSON > testsettings.json &&
         az login --service-principal --username $SPN_ID --password $SPN_SECRET --tenant $TENANT && 
-        dotnet test CrossfireXUnit.csproj --results-directory results --configuration Debug --runtime linux-x64 --collect:"XPlat Code Coverage" /p:CoverletOutputFormat=lcov --logger trx
+        dotnet test CrossfireXUnit.csproj --configuration Debug --runtime linux-x64 --collect:"XPlat Code Coverage" /p:CoverletOutputFormat=lcov --logger GitHubActions
     - name: Publish Code Coverage
       uses: romeovs/lcov-reporter-action@v0.2.16
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        lcov-file: ./test/CrossfireXUnit/results/lcov.info
+        lcov-file: ./test/CrossfireXUnit/TestResults/lcov.info
 
