--- a/test/CrossfireXUnit/CrossfireXUnit.csproj
+++ b/test/CrossfireXUnit/CrossfireXUnit.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="GitHubActionsTestLogger" Version="1.2.0" />
     <PackageReference Include="Hangfire.InMemory" Version="0.3.4" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.14" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
